--- a/RandomTesting/main.ipynb
+++ b/RandomTesting/main.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "5bb39939-21f4-489d-a6c7-2dd3006562c8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/conda/envs/data-science-stack-2.11.0/lib/python3.10/site-packages/torchvision/io/image.py:13: UserWarning: Failed to load image Python extension: 'libc10_cuda.so: cannot open shared object file: No such file or directory'If you don't plan on using image functionality from `torchvision.io`, you can ignore this warning. Otherwise, there might be something wrong with your environment. Did you have `libjpeg` or `libpng` installed before building `torchvision` from source?\n",
-      "  warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import torch\n",
@@ -25,12 +16,12 @@
     "from torchvision import transforms, utils\n",
     "from torchvision import transforms as t\n",
     "from torchvision.models.video.resnet import r2plus1d_18, R2Plus1D_18_Weights\n",
-    "from CPTADDataset import CPTADDataset"
+    "from torchviz import make_dot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "540c615d-bb6e-4450-81c6-c3fca001501d",
    "metadata": {},
    "outputs": [
@@ -38,7 +29,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using cpu device\n"
+      "Using cuda device\n"
      ]
     }
    ],
@@ -49,23 +40,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "350d246a-e8e9-46c6-8a14-89e0917afcaa",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading: \"https://download.pytorch.org/models/r2plus1d_18-91a641e6.pth\" to /root/.cache/torch/hub/checkpoints/r2plus1d_18-91a641e6.pth\n",
-      "100%|██████████| 120M/120M [00:01<00:00, 112MB/s]  \n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -288,77 +266,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "49a7beb0-aba3-4315-820f-53bf3165031d",
+   "execution_count": 11,
+   "id": "81b80e97-c1ca-4840-b038-e47120b15eb8",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training Length: 692\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'r1plus2d.png'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "transform = torch.nn.Sequential(t.Resize((112, 112)),\n",
-    "                                 t.Normalize([0.43216, 0.394666, 0.37645], [0.22803, 0.22145, 0.216989])) # https://pytorch.org/vision/0.8/models.html#video-classification\n",
-    "\n",
-    "training_data = CPTADDataset(\"anno_train.csv\", \n",
-    "                             \"../data/Datasets/CPTAD/Videos/\", \n",
-    "                             nframes=16,\n",
-    "                             transform=None)\n",
-    "    \n",
-    "test_data = CPTADDataset(\"anno_test.csv\", \n",
-    "                             \"../data/Datasets/CPTAD/Videos/\", \n",
-    "                             nframes=16,\n",
-    "                             transform=transform)\n",
-    "\n",
-    "print(f\"Training Length: {len(training_data)}\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "f7f1ed49-68c2-4805-a90e-955cc74815c1",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'fprintf' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mfprintf\u001b[49m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTraining Length: \u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m, training_data\u001b[38;5;241m.\u001b[39m__length__())\n\u001b[1;32m      3\u001b[0m batch_size \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m4\u001b[39m\n\u001b[1;32m      5\u001b[0m train_dataloader \u001b[38;5;241m=\u001b[39m DataLoader(training_data, batch_size\u001b[38;5;241m=\u001b[39mbatch_size)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'fprintf' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "\n",
-    "batch_size = 4\n",
-    "\n",
-    "train_dataloader = DataLoader(training_data, batch_size=batch_size)\n",
-    "test_dataloader = DataLoader(test_data, batch_size=batch_size)\n",
-    "\n",
-    "for X, y in test_dataloader:\n",
-    "    print(f\"Shape of X [N, C, H, W]: {X.shape}\")\n",
-    "    print(f\"Shape of y: {y.shape} {y.dtype}\")\n",
-    "    break"
+    "x = torch.zeros(1, 3, 16, 112, 112, dtype=torch.float, requires_grad=False).to(device)\n",
+    "y = model(x)\n",
+    "make_dot(y, params=dict(list(model.named_parameters()))).render(\"r1plus2d\", format=\"png\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48013b80-cd5c-447f-9efc-d8e57e111325",
+   "id": "b6c47301-bf79-4cf5-a0ec-ee0ec0bdd240",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def train:\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
