--- a/RandomTesting/main.ipynb
+++ b/RandomTesting/main.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "540c615d-bb6e-4450-81c6-c3fca001501d",
    "metadata": {},
    "outputs": [
@@ -29,18 +29,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using cuda device\n"
+      "Using cpu device\n"
      ]
     }
    ],
    "source": [
     "device = (\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "device = \"cpu\"\n",
     "print(f\"Using {device} device\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "350d246a-e8e9-46c6-8a14-89e0917afcaa",
    "metadata": {},
    "outputs": [
@@ -261,22 +262,23 @@
    ],
    "source": [
     "model = r2plus1d_18(weights=R2Plus1D_18_Weights.DEFAULT).to(device)\n",
+    "model.eval()\n",
     "print(model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "81b80e97-c1ca-4840-b038-e47120b15eb8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'r1plus2d.png'"
+       "'r1plus2d_eval.png'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +286,7 @@
    "source": [
     "x = torch.zeros(1, 3, 16, 112, 112, dtype=torch.float, requires_grad=False).to(device)\n",
     "y = model(x)\n",
-    "make_dot(y, params=dict(list(model.named_parameters()))).render(\"r1plus2d\", format=\"png\")"
+    "make_dot(y, params=dict(list(model.named_parameters()))).render(\"r1plus2d_eval\", format=\"png\")"
    ]
   },
   {
